# Masters

./: README.md  rsync.bash
src/: .gitignore  setup.py
src/AutoMarker/: CMakeLists.txt
src/AutoMarker/src/: Logger.cpp  Logger.h  main.cpp
src/AutoMarker/src/ast/: ASTMapper.cpp  ASTMapper.h  ASTPruner.cpp  ASTPruner.h  SimpleStatement.cpp  SimpleStatement.h  Solution.cpp  Solution.h
src/AutoMarker/src/ast/helpers/: IsModifiedChecker.cpp  IsModifiedChecker.h  PostCreateTree.cpp  PostCreateTree.h
src/AutoMarker/src/costmodels/: KeyFnCostModel.cpp  KeyFnCostModel.h  SimpleStatementCostModel.cpp  SimpleStatementCostModel.h
src/AutoMarker/src/markers/: ECE459_A1_nbio.cpp  ECE459_A1_nbio.h  ECE459_A1_parallel.cpp  ECE459_A1_parallel.h  Marker.cpp  Marker.h
src/tests/: batch.py  constants.py  execute.py  gitlab.py  graphs.py  mark.py  run.py  util.py
src/tests/output/: .gitignore
thesis/: Makefile
thesis/media/code/: inlining-after.c  inlining-before.c  paster_nbio.c  paster_parallel.c  pruning-useless-after.c  pruning-useless-before.c  simplify-if-neg-after.c  simplify-if-neg-before.c  simplify-loops-do-before.c  simplify-loops-for-after.c  simplify-loops-for-before.c  simplify-loops-for-nontrad-after.c  simplify-loops-for-nontrad-before.c  simplify-loops-while-before.c  simplify-var.c
thesis/presentation/: Makefile  presentation.tex
thesis/presentation/slides/: clangautomarker.tex  conversion-to-mark.tex  introduction.tex  summary.tex
thesis/thesis/: Makefile  thesis.bib  thesis.tex
thesis/thesis/appendix/: results.tex  table_full-marks.tex  (+4 more)
(+31 files in other folders)
